加入 static 檔案處理(for avatar)

--- a/index.html.slim
+++ b/index.html.slim
@@ -11,6 +11,7 @@ html
   body
     .container.col-xs-8.col-xs-offset-2
       .row.profile
+        img.avatar.img-circle src="images/avatar.jpg"
         #net-info-container
           p itswind.tw
           p itswindtw [at] gmail [dot] com
