--- a/index.html.slim
+++ b/index.html.slim
@@ -15,10 +15,10 @@ html
         img.avatar.img-circle src="images/avatar.jpg"
         #net-info-container
           p
-            span.glyphicon.glyphicon-home
+            i.fa.fa-home.fa-lg
             | itswind.tw
           p
-            span.glyphicon.glyphicon-envelope
+            i.fa.fa-envelope-o.fa-lg
             | itswindtw [at] gmail [dot] com
         p.chinese-name 董孟鑫
         p.english-translation Meng-Hsin Tung
