--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -79,7 +79,7 @@ body {
     text-align: right;
     font-size: larger;
 
-    p span { margin-right: 5px; }
+    p i { margin-right: 5px; }
   }
 }
 
