利用一下 bs 的 respondsive

--- a/index.html.slim
+++ b/index.html.slim
@@ -5,12 +5,12 @@ html
     meta http-equiv="X-UA-Compatible" content="IE=edge"
     meta name="viewport" content="width=device-width, initial-scale=1"
     meta name="author" content="Meng-Hsin Tung"
-    title itswind.tw
+    title It's windtw
     link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet"
     link href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet"
     link href="stylesheets/screen.css" media="screen, projection" rel="stylesheet"
   body
-    .container.col-xs-8.col-xs-offset-2
+    .container.col-xs-12.col-md-8.col-md-offset-2
       .row.profile
         img.avatar.img-circle src="images/avatar.jpg"
         #net-info-container
