--- a/index.html.slim
+++ b/index.html.slim
@@ -43,6 +43,7 @@ html
       .row.item.social
         .col-xs-3 Social
         .col-xs-9
+          a href="http://blog.itswindtw.info": i.fa.fa-tumblr-square.fa-5x
           a href="https://github.com/itswindtw": i.fa.fa-github.fa-5x
           a href="https://twitter.com/itswindtw": i.fa.fa-twitter.fa-5x
           a href="https://facebook.com/itswindtw": i.fa.fa-facebook-square.fa-5x
