--- a/index.html.slim
+++ b/index.html.slim
@@ -44,8 +44,8 @@ html
         .col-xs-3 Social
         .col-xs-9
           a href="http://blog.itswindtw.info": i.fa.fa-tumblr-square.fa-5x
-          a href="https://github.com/itswindtw": i.fa.fa-github.fa-5x
-          a href="https://twitter.com/itswindtw": i.fa.fa-twitter.fa-5x
+          a href="https://github.com/itswindtw": i.fa.fa-github-square.fa-5x
+          a href="https://twitter.com/itswindtw": i.fa.fa-twitter-square.fa-5x
           a href="https://facebook.com/itswindtw": i.fa.fa-facebook-square.fa-5x
           a href="http://tw.linkedin.com/in/itswindtw": i.fa.fa-linkedin-square.fa-5x
 
