--- a/index.html.slim
+++ b/index.html.slim
@@ -26,20 +26,36 @@ html
         .col-xs-3 Education
         .col-xs-9
           .school
+            span.during.pull-right 2010/09 - 2013/06
             a.name href="http://www.nctu.edu.tw/" target="_blank" National Chiao Tung University, Taiwan
             ul
-              li.major Bechelor Degree / Computer Science (2010/09 - 2013/06)
+              li.major
+                | Bechelor Degree / Computer Science
+
       .row.item.work-experience
         .col-xs-3 Work Experience
         .col-xs-9
-          .company
-            a.name href="http://hypo.cc" target="_blank" Hypo.cc
+          .job
+            span.pull-right.during 2013/07 - 2014/06
+            span.job-title Web Developer
+            a.name.job-company href="http://hypo.cc" target="_blank" Hypo.cc
             ul
-              li.job-title Web Developer
+              li.job-detail Developing web applications (mainly Ruby and JavaScript), maintaining Linux servers, and designing new internal systems.
       .row.item.projects
         .col-xs-3 Projects
         .col-xs-9
-          | Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+          .project
+            .pull-right: a href="http://hypo.cc/date.html" target="_blank"
+              i.fa.fa-external-link
+            .project-name HypoCard
+            img.preview src="images/projects/hypo-card.png"
+            .project-techniques AngularJS, Grape (Ruby)
+          .project
+            .pull-right: a href="http://gallery.hypo.cc/view/ticket/37560-C50E2A8A#!/browser" target="_blank"
+              i.fa.fa-external-link
+            .project-name Hypo Gallery
+            img.preview src="images/projects/hypo-gallery.png"
+            .project-techniques JavaScript
       .row.item.social
         .col-xs-3 Social
         .col-xs-9
