changed hypocard url

--- a/index.html.slim
+++ b/index.html.slim
@@ -45,7 +45,7 @@ html
         .col-xs-3 Projects
         .col-xs-9
           .project
-            .pull-right: a href="http://hypo.cc/date.html" target="_blank"
+            .pull-right: a href="http://card.hypo.cc" target="_blank"
               i.fa.fa-external-link
             .project-name HypoCard
             img.preview src="images/projects/hypo-card.png"
