--- a/index.html.slim
+++ b/index.html.slim
@@ -55,7 +55,7 @@ html
               i.fa.fa-external-link
             .project-name Hypo Gallery
             img.preview src="images/projects/hypo-gallery.png"
-            .project-techniques JavaScript
+            .project-techniques JavaScript, Sinatra (Ruby)
       .row.item.social
         .col-xs-3 Social
         .col-xs-9
