--- a/index.html.slim
+++ b/index.html.slim
@@ -37,7 +37,7 @@ html
         .col-xs-9
           .job
             span.pull-right.during 2013/07 - 2014/06
-            span.job-title Web Developer
+            span.job-title Developer
             a.name.job-company href="http://hypo.cc" target="_blank" Hypo.cc
             ul
               li.job-detail Developing web applications (mainly Ruby and JavaScript), maintaining Linux servers, and designing new internal systems.
