--- a/index.html.slim
+++ b/index.html.slim
@@ -16,7 +16,7 @@ html
         #net-info-container
           p
             i.fa.fa-home.fa-lg
-            | itswind.tw
+            | itswind.github.io
           p
             i.fa.fa-envelope-o.fa-lg
             | itswindtw [at] gmail [dot] com
@@ -26,8 +26,14 @@ html
         .col-xs-3 Education
         .col-xs-9
           .school
+            span.during.pull-right 2014/08 - 2015/12
+            a.name href="http://www.gatech.edu" target="_blank" Georgia Institute of Technology, USA
+            ul
+              li.major
+                | Master Degree / Computer Science (Computing System)
+          .school
             span.during.pull-right 2010/09 - 2013/06
-            a.name href="http://www.nctu.edu.tw/" target="_blank" National Chiao Tung University, Taiwan
+            a.name href="http://www.nctu.edu.tw" target="_blank" National Chiao Tung University, Taiwan
             ul
               li.major
                 | Bechelor Degree / Computer Science
@@ -36,26 +42,36 @@ html
         .col-xs-3 Work Experience
         .col-xs-9
           .job
-            span.pull-right.during 2013/07 - 2014/06
+            span.pull-right.during 2016/01 - Current
             span.job-title Developer
             a.name.job-company href="http://hypo.cc" target="_blank" Hypo.cc
+          .job
+            span.pull-right.during 2013/07 - 2014/06
+            span &nbsp;
             ul
               li.job-detail Developing web applications (mainly Ruby and JavaScript), maintaining Linux servers, and designing new internal systems.
       .row.item.projects
         .col-xs-3 Projects
         .col-xs-9
           .project
+            .pull-right: a href="https://www.youtube.com/watch?v=br4D78pDeao" target="_blank"
+              i.fa.fa-external-link
+            .project-name Game Pinball (2015)
+            img.preview src="images/projects/pinball.png"
+            .project-techniques Unity
+          .project
             .pull-right: a href="http://card.hypo.cc" target="_blank"
               i.fa.fa-external-link
-            .project-name HypoCard
+            .project-name HypoCard (2013)
             img.preview src="images/projects/hypo-card.png"
             .project-techniques AngularJS, Grape (Ruby)
           .project
             .pull-right: a href="http://gallery.hypo.cc/view/ticket/37560-C50E2A8A#!/browser" target="_blank"
               i.fa.fa-external-link
-            .project-name Hypo Gallery
+            .project-name Hypo Gallery (2012)
             img.preview src="images/projects/hypo-gallery.png"
             .project-techniques JavaScript, Sinatra (Ruby)
+
       .row.item.social
         .col-xs-3 Social
         .col-xs-9
@@ -64,7 +80,6 @@ html
           a href="https://twitter.com/itswindtw": i.fa.fa-twitter-square.fa-5x
           a href="https://facebook.com/itswindtw": i.fa.fa-facebook-square.fa-5x
           a href="http://tw.linkedin.com/in/itswindtw": i.fa.fa-linkedin-square.fa-5x
-
 
       .row.footer.text-right
         .col-xs-12
