--- a/index.html.slim
+++ b/index.html.slim
@@ -54,17 +54,23 @@ html
         .col-xs-3 Projects
         .col-xs-9
           .project
-            .pull-right: a href="https://www.youtube.com/watch?v=br4D78pDeao" target="_blank"
+            .pull-right: a href="https://uploader.hypo.cc" target="_blank"
               i.fa.fa-external-link
-            .project-name Game Pinball (2015)
-            img.preview src="images/projects/pinball.png"
-            .project-techniques Unity
+            .project-name Hypo Uploader (2016)
+            img.preview src="images/projects/uploader.png"
+            .project-techniques Elixir/Erlang, Vue.js
           .project
             .pull-right: a href="http://card.hypo.cc" target="_blank"
               i.fa.fa-external-link
             .project-name HypoCard (2013)
             img.preview src="images/projects/hypo-card.png"
             .project-techniques AngularJS, Grape (Ruby)
+          .project
+            .pull-right: a href="https://www.youtube.com/watch?v=br4D78pDeao" target="_blank"
+              i.fa.fa-external-link
+            .project-name Game Pinball (2015)
+            img.preview src="images/projects/pinball.png"
+            .project-techniques Unity
           .project
             .pull-right: a href="http://gallery.hypo.cc/view/ticket/37560-C50E2A8A#!/browser" target="_blank"
               i.fa.fa-external-link
